@@ -8,6 +8,8 @@ Release 0.9.0 - unreleased
 
   IMPROVEMENT
 
+    TAJO-425: RAWFILE_SYNC_INTERVAL has not default value. (jinho)
+
     TAJO-617: Rename BIN/tajo_dump BIN/tajo-dump. (jinho)
 
     TAJO-789: Improve shuffle URI. (jinho)
